--- a/main.css
+++ b/main.css
@@ -31,15 +31,27 @@ footer{
     color: #949493;
 }
 
-.logo{
-    vertical-align: middle;
+img.logo{
     width: 95px;
     height: 65px;
 }
 
+div.navbar-position img.logo{
+    margin-top: 7px;
+}
+
 .novium-title{
     margin-left: 10px;
-    line-height: 130px;
+    display: inline-block;
+}
+
+.navbar-position{
+    position: absolute;
+    height: 80px;
+}
+
+nav{
+    margin-top: 2%;
 }
 
 .header-container{
@@ -47,7 +59,7 @@ footer{
     display: -webkit-flex;
     justify-content: center;
     width: 100%;
-    height: 130px;
+    height: 80px;
     background-color: #fff;
 }
 
@@ -55,6 +67,7 @@ footer{
     display: -webkit-flex;
     display: flex;
     justify-content: flex-end;
+    height: 80px;
 }
 
 .nav-content{
@@ -582,3 +595,12 @@ p.text-center{
 .logo-linkedin, .logo-facebook, .logo-twitter{
     height: 30px;
 }
+
+@media only screen and (min-device-width : 420px){
+/* Styles */
+.footer-background{
+
+    }
+}
+
+
