--- a/fonts.css
+++ b/fonts.css
@@ -1,14 +1,13 @@
-body{
+body h1 h2 p a{
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
 h2{
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 1.45em;
+    font-size: 1.35em;
     font-style: normal;
     font-variant: normal;
-    font-weight: 200;
-    line-height: 25.5px;
+    font-weight: 400;
 }
 
 h1{
@@ -30,12 +29,16 @@ h2.title{
 
 p{
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-style: normal;
     font-variant: normal;
-    font-weight: 100;
-    line-height: 18px;
+    font-weight: 400;
+    line-height: 17px;
     margin: 0 auto;
+}
+
+.mess-text3, p{
+    font-size: 1.0em;
 }
 
 a{
