--- a/main.css
+++ b/main.css
@@ -91,13 +91,13 @@ li a{
     background-image: url(images/carousel-img.png);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 580px;
+    height: 36.25em;
     width: 100%;
 }
 
 .who-we-are-container{
     width: 100%;
-    height: 670px;
+    height: 40em;
 }
 
 .who-we-are-content{
@@ -105,12 +105,14 @@ li a{
     margin: 0 auto;
 }
 
-.border-box{
-    border-bottom: solid 2px;
-    width: 140px;
+.border-box-wwa{
+    border-bottom: solid 1px;
+    width: 130px;
     border-color: #a3d55d;
+    padding-top: 10px;
     margin-bottom: 70px;
     text-align: center;
+    line-height: 10px;
 }
 
 .who-we-are-content-flex{
@@ -120,37 +122,30 @@ li a{
     margin: 0 auto;
 }
 
+.objectives-box, .process-box, .delivery-box{
+    text-align: center;
+}
+
+.objectives-box p, .process-box p, .delivery-box p{
+    text-align: left;
+}
+
 .process-img{
     max-width: 142px;
     height: 130.5px;
-    margin-left: 15px;
 }
 
 .objective-img{
     max-width: 142px;
     height: 129px;
-    margin-left: 20px;
 }
 
 .delivery-img{
-    max-width: 175.5px;
+    max-width: 190.5px;
     height: 131px;
 }
 
-.objective-title{
-    text-align: center;
-    margin-top: 55px;
-    margin-bottom: 30px;
-}
-
-.process-title{
-    text-align: center;
-    margin-top: 55px;
-    margin-bottom: 30px;
-}
-
-.delivery-title{
-    text-align: center;
+.objective-title, .process-title, .delivery-title{
     margin-top: 55px;
     margin-bottom: 30px;
 }
@@ -170,14 +165,6 @@ li a{
     margin-bottom: 10px;
 }
 
-.border-box-case-study{
-    border-bottom: solid 2px;
-    width: 150px;
-    border-color: #a3d55d;
-    margin-bottom: 70px;
-    text-align: center;
-}
-
 .text-who-we-are-line-height{
     line-height: 0.9;
     max-width: 180px;
@@ -191,14 +178,15 @@ li a{
     color: #949493;
 }
 
-.white-color{
+.white-color-services{
     color: #fff;
+    height: 40px;
 }
 
 .services-container{
     width: 100%;
     background-color: #a3d55d;
-    height: 720px;
+    height: 780px;
 }
 
 .services-content{
@@ -206,15 +194,29 @@ li a{
     margin: 0 auto;
 }
 
-.services-title{
-    margin-bottom: 35px;
+.border-box-services{
+    border-bottom: solid 1px;
+    width: 95px;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-color: #fff;
+    line-height: 25px;
 }
 
-.logo-white{
+h2.border-box-services{
+    line-height: 10px;
+}
+
+.services-title{
+    margin-bottom: 50px;
+}
+
+.logo-services{
     max-width: 95px;
     height: 65px;
     margin-top: 55px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .services-logo-title-flex{
@@ -229,28 +231,24 @@ li a{
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    padding-left: 5px;
 }
 
 .coding-col-flex{
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    padding-left: 5px;
 }
 
 .creative-col-flex{
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    padding-right: 5px;
 }
 
 .hosting-col-flex{
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
-    padding-right: 5px;
 }
 
 .ideation-creative-flex{
@@ -286,15 +284,16 @@ li a{
 
 .hosting-title, .coding-title,.ideation-title,.creative-title {
     text-align: center;
+    padding-top: 20px;
 }
 
 .text-col-wid{
-    max-width: 390px;
-    margin-top: -20px;
+  width: 390px;
 }
 
 .text-col-wid p{
     color: white;
+    margin-top: 10px;
 }
 
 .coding-img, .hosting-img{
@@ -303,17 +302,9 @@ li a{
     margin: 0 auto;
 }
 
-.border-box-services{
-    border-bottom: solid 2px;
-    max-width: 106px;
-    text-align: center;
-    padding-bottom: 10px;
-    border-color: #fff;
-}
-
 .projects-container{
     max-width: 100%;
-    height: 740px;
+    height: 800px;
     background-image: url('images/projects-background-img.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -324,13 +315,20 @@ li a{
     margin: 0 auto;
 }
 
+.logo-projects{
+    margin-top: 60px;
+}
+
 .border-box-projects{
-    border-bottom: solid 2px;
+    border-bottom: solid 1px;
     max-width: 120px;
     border-color: #fff;
-    margin-bottom: 80px;
-    padding-bottom: 10px;
     text-align: center;
+    line-height: 10px;
+}
+
+.projects-title{
+    margin-top: 30px;
 }
 
 .inline-block{
@@ -358,6 +356,7 @@ li a{
     display: flex;
     align-items: space-between;
     justify-content: center;
+    margin-top: 80px;
 }
 
 .projects-logo-title-flex{
@@ -376,10 +375,6 @@ li a{
     display: flex;
     flex-direction: column;
     padding-left: 85px;
-}
-
-.projects-title{
-    margin: 0 auto;
 }
 
 img.project1-img{
@@ -411,20 +406,17 @@ img.project3-img{
 .project1-title{
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 35px;
     margin-right: 20px;
 }
 
 .project2-title{
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 35px;
 }
 
 .project3-title{
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 35px;
     margin-left: 20px;
 }
 
@@ -445,9 +437,18 @@ img.project3-img{
     height: 707.5px;
 }
 
+.border-box-case-study{
+    border-bottom: solid 1px;
+    width: 140px;
+    border-color: #a3d55d;
+    margin-bottom: 70px;
+    text-align: center;
+    line-height: 10px;
+}
+
 .case-study-title{
-    padding-top: 10px;
-    color:#949493;
+    padding-top: 40px;
+    color: #949493;
     margin-bottom: 10px;
 }
 
@@ -476,12 +477,12 @@ img.project3-img{
 }
 
 div.target1{
-    border: 5px solid #a3d55d;
+    border: 3px solid #a3d55d;
     height: 180px;
 }
 
 div.target2, div.target3{
-    border: 5px solid #a3d55d;
+    border: 3px solid #a3d55d;
     height: 180px;
     display: none;
 }
